# PO_LAB3_MSC

./: CMakeLists.txt  GeneratorSygnalow.cpp  GeneratorSygnalow.h  ModelARX.cpp  ModelARX.h  PetlaSprzezeniaZwrotnego.cpp  PetlaSprzezeniaZwrotnego.h  RegulatorPID.cpp  RegulatorPID.h  SumaSygnalow.h  Sygnal.h  SygnalFabryka.h  SygnalIO.h  SygnalKomponent.h  SygnalProstokatny.cpp  SygnalProstokatny.h  SygnalSinusoidalny.cpp  SygnalSinusoidalny.h  SygnalStaly.cpp  SygnalStaly.h  SygnalSzumBialy.h  SygnalTrojkatny.cpp  SygnalTrojkatny.h  SygnalZNasyceniem.cpp  SygnalZNasyceniem.h  lab1.cpp  lab2.cpp
